# rsomics-fastq-split

./: Cargo.toml  README.md
benches/: bench.rs  fastq_split.rs
src/: cli.rs  lib.rs  main.rs
tests/: compat.rs
tests/golden/: pe.fastq.r1  pe.fastq.r2  se5.fastq
