[package]
name = "rsomics-fastq-split"
version = "0.1.0"
description = "Split a FASTQ into N files or by line count. Rust port of fastp's split (deterministic --split_by_lines is byte-equal to fastp 0.20.1; --split N is exact-count). SE and PE."
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]
readme = "README.md"
categories = ["science", "command-line-utilities"]
keywords = ["fastq", "bioinformatics", "split", "fastp", "preprocessing"]

[[bin]]
name = "rsomics-fastq-split"
path = "src/main.rs"

[lib]
name = "rsomics_fastq_split"
path = "src/lib.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-fqgz = { version = "0.1" }
rsomics-seqio = { version = "0.1" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rayon = "1"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
libdeflater = "1"

[dev-dependencies]
rsomics-common = { version = "0.6", features = ["test-support", "rayon"] }
tempfile = "3"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "fastq_split"
harness = false

